apps/cli/crates/onequery-wtl/src/ralph/snapshots/onequery_wtl__ralph__cli__tests__ralph_run_help.snap
---
source: crates/onequery-wtl/src/ralph/cli.rs
expression: rendered
---
Ralph Loop CLI

Usage: ralph-loop [OPTIONS] <PROMPT>

Arguments:
  <PROMPT>
          The user task prompt for the Ralph loop run

Options:
      --output <OUTPUT>
          Output format
          
          [possible values: text, json]

      --model <MODEL>
          Codex model to use
          
          [default: gpt-5.4]

      --base-branch <BASE_BRANCH>
          Base branch to branch from
          
          [default: main]

      --max-iterations <MAX_ITERATIONS>
          Maximum coding-loop iterations
          
          [default: 20]

      --work-branch <WORK_BRANCH>
          Working branch name

      --timeout <TIMEOUT>
          Max wall-clock seconds per turn
          
          [default: 7200]

      --approval-policy <APPROVAL_POLICY>
          Codex approval policy
          
          [default: never]

      --sandbox <SANDBOX>
          Codex sandbox policy
          
          [default: workspace-write]

      --preserve-worktree
          Keep the generated worktree after the run

      --dry-run
          Validate and describe the run without side effects

  -h, --help
          Print help

  -V, --version
          Print version
